# FreeRTOS-FAT-CLI-for-RPi-Pico

./: .gitignore  .gitmodules  CMakeLists.txt  FreeRTOS+FAT+CLI.c  README.md
FreeRTOS+FAT+CLI/: CMakeLists.txt
FreeRTOS+FAT+CLI/include/: CLI-commands.h  File-related-CLI-commands.h  FreeRTOSConfig.h  FreeRTOSFATConfig.h  FreeRTOS_CLI.h  cmsis_compiler.h  crash.h  ff_utils.h  my_debug.h  stdio_cli.h  util.h
FreeRTOS+FAT+CLI/portable/RP2040/: crc.c  crc.h  demo_logging.c  ff_sddisk.c  hw_config.c  hw_config.h  sd_card.c  sd_card.h  sd_spi.c  sd_spi.h  sd_spi.simple.c  spi.c  spi.h  spi.simple.c
FreeRTOS+FAT+CLI/src/: CLI-commands.c  File-related-CLI-commands.c  FreeRTOS_CLI.c  FreeRTOS_time.c  crash.c  ff_utils.c  my_debug.c  stdio_cli.c
example/: CMakeLists.txt  data_log_demo.c  example.c  hw_config.c  stdio_cli.c  thing_plus.hw_config.c
example/tests/: CreateAndVerifyExampleFiles.c  app4-IO_module_function_checker.c  big_file_test.c  ff_stdio_tests_with_cwd.c  filesystem_test_suite.c  mt_lliot.c  my_test.c
examples/command_line/: CMakeLists.txt  README.md
examples/command_line/config/: alt.hw_config.c  dev_brd.hw_config.c  exp_mod_A_SDIO.hw_config.c  exp_mod_A_SPI.hw_config.c  hw_config.c  maker_pi_pico.hw_config.c  protoboard.hw_config.c  thing_plus.hw_config.c
examples/command_line/include/: FreeRTOSConfig.h  FreeRTOSFATConfig.h  command.h  stdio_cli.h  task_config.h  tests.h  unmounter.h
examples/command_line/src/: command.c  command.cpp  data_log_demo.c  main.cpp  stdio_cli.c  unmounter.c
examples/command_line/tests/: CreateAndVerifyExampleFiles.c  app4-IO_module_function_checker.c  bench.c  big_file_test.c  ff_stdio_tests_with_cwd.c  mtbft.c  simple.c
examples/dynamic_config/: CMakeLists.txt  main.cpp
examples/dynamic_config/include/: FreeRTOSConfig.h
examples/example/: CMakeLists.txt  example.c  hw_config.c  stdio_cli.c  thing_plus.hw_config.c
examples/example/include/: filesystem_test_suite.h
examples/example/tests/: CreateAndVerifyExampleFiles.c  app4-IO_module_function_checker.c  big_file_test.c  ff_stdio_tests_with_cwd.c  my_test.c
examples/iperf/: CMakeLists.txt  FreeRTOSConfig.h  FreeRTOSFATConfig.h  hw_config.c  picow_freertos_iperf.c
examples/pico_w/httpd/: CMakeLists.txt  LICENSE  README.md  cgi.h  geoff.lwipopts.h  htmldata.c  lwipopts.h  main.c  makefsdata.py  sd_filesystem.c  sd_filesystem.h  ssi.h
examples/pico_w/httpd/html_files/: index.shtml
examples/pico_w/iperf/: CMakeLists.txt
examples/simple_example/: CMakeLists.txt  hw_config.c
examples/simple_sdio/: CMakeLists.txt  README.md  hw_config.c  main.cpp
examples/simple_sdio/include/: FreeRTOSConfig.h
examples/simple_spi/: CMakeCache.txt  CMakeLists.txt  README.md  hw_config.c  main.cpp
examples/simple_spi/include/: FreeRTOSConfig.h
examples/stdio_buffering/: CMakeLists.txt  README.md  hw_config.c  main.cpp
examples/wifi_httpd/: CMakeLists.txt  FreeRTOSConfig.h  README.md  hw_config.c  lwipopts.h  main.c  pico_error_str.c  pico_error_str.h  sd_filesystem.c  sd_filesystem.h
include/: CLI-commands.h  File-related-CLI-commands.h  FreeRTOSConfig.h  FreeRTOSFATConfig.h  FreeRTOS_time.h  core_cm0plus.h  crash.h  ff_utils.h  filesystem_test_suite.h  my_debug.h  sd_spi.h
portable/MCU_PSOC6_M4/: ff_sddisk.c  hw_config.c  sd_card.c  sd_card.h  sd_spi.c  sd_spi.h  spi.c
portable/RP2040/: demo_logging.c  ff_sddisk.c  hw_config.c  sd_card.c  sd_card.h  sd_spi.c  sd_spi.h  spi.c  spi.h  spi.simple.c
simple_example/: CMakeLists.txt  hw_config.c  simple_example.cpp  thing_plus.hw_config.c
src/: CLI-commands.c  File-related-CLI-commands.c  FreeRTOS_time.c  crash.c  data_log_demo.c  ff_utils.c  my_debug.c  stdio_cli.c
src/FreeRTOS+FAT+CLI/: CMakeLists.txt
src/FreeRTOS+FAT+CLI/include/: FreeRTOSConfig.h  FreeRTOSFATConfig.h  FreeRTOS_strerror.h  FreeRTOS_time.h  cmsis_gcc.h  core_cm0plus.h  crash.h  crc.h  delays.h  ff_utils.h  hw_config.h  my_debug.h  portability.h  stdio_cli.h  task_config.h  util.h
src/FreeRTOS+FAT+CLI/portable/RP2040/: SdCardInfo.h  ff_sddisk.c  ff_sddisk.h  hw_config.h  sd_card.c  sd_card.h  sd_card_constants.h  sd_spi.c  spi.simple.c
src/FreeRTOS+FAT+CLI/portable/RP2040/SDIO/: ZuluSCSI_platform.h  rp2040_sdio.c  rp2040_sdio.h  sd_card_sdio.c
src/FreeRTOS+FAT+CLI/portable/RP2040/SPI/: crc.c  crc.h  my_spi.c  my_spi.h  sd_card_spi.c  sd_card_spi.h  sd_spi.c  sd_spi.h  spi.c  spi.h
src/FreeRTOS+FAT+CLI/src/: CLI-commands.c  FreeRTOS_strerror.c  FreeRTOS_time.c  crash.c  crc.c  ff_utils.c  file_stream.c  freertos_callbacks.c  my_debug.c
src/tests/: CreateAndVerifyExampleFiles.c  app4-IO_module_function_checker.c  big_file_test.c  ff_stdio_tests_with_cwd.c  filesystem_test_suite.c  my_test.c
