add_library(FreeRTOS+FAT+CLI INTERFACE)
target_sources(FreeRTOS+FAT+CLI INTERFACE
        ../Lab-Project-FreeRTOS-FAT/ff_crc.c
        ../Lab-Project-FreeRTOS-FAT/ff_dir.c
        ../Lab-Project-FreeRTOS-FAT/ff_error.c
        ../Lab-Project-FreeRTOS-FAT/ff_fat.c
        ../Lab-Project-FreeRTOS-FAT/ff_file.c
        ../Lab-Project-FreeRTOS-FAT/ff_format.c
        ../Lab-Project-FreeRTOS-FAT/ff_ioman.c
        ../Lab-Project-FreeRTOS-FAT/ff_locking.c
        ../Lab-Project-FreeRTOS-FAT/ff_memory.c
        ../Lab-Project-FreeRTOS-FAT/ff_stdio.c
        ../Lab-Project-FreeRTOS-FAT/ff_string.c
        ../Lab-Project-FreeRTOS-FAT/ff_sys.c
        ../Lab-Project-FreeRTOS-FAT/ff_time.c 
        portable/RP2040/dma_interrupts.c
        portable/RP2040/ff_sddisk.c
        portable/RP2040/sd_card.c
        portable/RP2040/SPI/crc.c
        portable/RP2040/SPI/sd_card_spi.c
        portable/RP2040/SPI/sd_spi.c
        portable/RP2040/SPI/spi.c
        portable/RP2040/SDIO/sd_card_sdio.c
        portable/RP2040/SDIO/rp2040_sdio.c
        src/crash.c
        src/ff_utils.c
        src/freertos_callbacks.c
        src/FreeRTOS_strerror.c
        src/FreeRTOS_time.c
        src/my_debug.c
        src/util.c
)
target_link_libraries(FreeRTOS+FAT+CLI INTERFACE
        cmsis_core
        FreeRTOS-Kernel
        FreeRTOS-Kernel-Heap4
        hardware_adc
        hardware_clocks
        hardware_dma
        hardware_pio
        hardware_rtc
        hardware_spi
        hardware_timer
        pico_multicore
        pico_stdlib
        pico_sync
)
target_include_directories(FreeRTOS+FAT+CLI INTERFACE 
        include/ 
        ../Lab-Project-FreeRTOS-FAT/include/
        portable/RP2040/
)